parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> lista_declaracoes
Rule 1     lista_declaracoes -> declaracao
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     declaracao -> declaracao_atribuicao
Rule 4     declaracao -> declaracao_expressao
Rule 5     declaracao -> declaracao_funcao
Rule 6     declaracao -> declaracao_se
Rule 7     declaracao -> declaracao_escrever
Rule 8     declaracao -> declaracao_comentario
Rule 9     declaracao_atribuicao -> VAR_ID = lista_expressoes ;
Rule 10    declaracao_atribuicao -> atribuicao
Rule 11    declaracao_atribuicao -> declaracao_atribuicao , atribuicao ;
Rule 12    atribuicao -> VAR_ID = expressao
Rule 13    lista_expressoes -> lista_expressoes , expressao
Rule 14    lista_expressoes -> expressao
Rule 15    declaracao_expressao -> expressao ;
Rule 16    expressao -> expressao + expressao
Rule 17    expressao -> expressao - expressao
Rule 18    expressao -> expressao * expressao
Rule 19    expressao -> expressao / expressao
Rule 20    expressao -> expressao AND expressao
Rule 21    expressao -> expressao OR expressao
Rule 22    expressao -> expressao EQ expressao
Rule 23    expressao -> expressao NE expressao
Rule 24    expressao -> expressao LT expressao
Rule 25    expressao -> expressao LE expressao
Rule 26    expressao -> expressao GT expressao
Rule 27    expressao -> expressao GE expressao
Rule 28    expressao -> ( expressao )
Rule 29    expressao -> - expressao
Rule 30    expressao -> NUM
Rule 31    expressao -> STRING
Rule 32    expressao -> VAR_ID
Rule 33    expressao -> [ lista_elementos ]
Rule 34    lista_elementos -> lista_elementos , expressao
Rule 35    lista_elementos -> expressao
Rule 36    lista_elementos -> vazio
Rule 37    expressao -> MAP ( VAR_ID , expressao )
Rule 38    expressao -> FOLD ( VAR_ID , expressao , expressao )
Rule 39    expressao -> ENTRADA ( )
Rule 40    expressao -> ALEATORIO ( NUM )
Rule 41    expressao -> VAR_ID ( lista_expressoes )
Rule 42    declaracao_funcao -> FUNCAO VAR_ID ( lista_parametros_opcional ) : bloco_funcao FIM
Rule 43    declaracao_funcao -> FUNCAO VAR_ID ( lista_parametros_opcional ) , : expressao ;
Rule 44    lista_parametros_opcional -> lista_parametros
Rule 45    lista_parametros_opcional -> vazio
Rule 46    lista_parametros -> lista_parametros , parametro
Rule 47    lista_parametros -> parametro
Rule 48    parametro -> VAR_ID
Rule 49    parametro -> NUM
Rule 50    parametro -> VAR_ID : VAR_ID
Rule 51    parametro -> [ ]
Rule 52    expressao -> [ ]
Rule 53    declaracao_se -> SE expressao : lista_declaracoes senao_opcional FIM
Rule 54    senao_opcional -> SENAO : lista_declaracoes
Rule 55    senao_opcional -> senao_se
Rule 56    senao_opcional -> vazio
Rule 57    senao_se -> SENAOSE expressao : lista_declaracoes senao_opcional
Rule 58    expressao -> NEG expressao
Rule 59    declaracao_escrever -> ESCREVER ( expressao ) ;
Rule 60    declaracao_comentario -> COMENTARIO
Rule 61    vazio -> <empty>
Rule 62    expressao -> expressao CONCAT expressao
Rule 63    bloco_funcao -> lista_declaracoes

Terminals, with rules where they appear

(                    : 28 37 38 39 40 41 42 43 59
)                    : 28 37 38 39 40 41 42 43 59
*                    : 18
+                    : 16
,                    : 11 13 34 37 38 38 43 46
-                    : 17 29
/                    : 19
:                    : 42 43 50 53 54 57
;                    : 9 11 15 43 59
=                    : 9 12
ALEATORIO            : 40
AND                  : 20
COMENTARIO           : 60
CONCAT               : 62
ENTRADA              : 39
EQ                   : 22
ESCREVER             : 59
FIM                  : 42 53
FOLD                 : 38
FUNCAO               : 42 43
GE                   : 27
GT                   : 26
LE                   : 25
LT                   : 24
MAP                  : 37
NE                   : 23
NEG                  : 58
NUM                  : 30 40 49
OR                   : 21
SE                   : 53
SENAO                : 54
SENAOSE              : 57
STRING               : 31
VAR_ID               : 9 12 32 37 38 41 42 43 48 50 50
[                    : 33 51 52
]                    : 33 51 52
error                : 

Nonterminals, with rules where they appear

atribuicao           : 10 11
bloco_funcao         : 42
declaracao           : 1 2
declaracao_atribuicao : 3 11
declaracao_comentario : 8
declaracao_escrever  : 7
declaracao_expressao : 4
declaracao_funcao    : 5
declaracao_se        : 6
expressao            : 12 13 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 34 35 37 38 38 43 53 57 58 59 62 62
lista_declaracoes    : 2 53 54 57 63 0
lista_elementos      : 33 34
lista_expressoes     : 9 13 41
lista_parametros     : 44 46
lista_parametros_opcional : 42 43
parametro            : 46 47
senao_opcional       : 53 57
senao_se             : 55
vazio                : 36 45 56

Parsing method: LALR

state 0

    (0) S' -> . lista_declaracoes
    (1) lista_declaracoes -> . declaracao
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) declaracao -> . declaracao_atribuicao
    (4) declaracao -> . declaracao_expressao
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_se
    (7) declaracao -> . declaracao_escrever
    (8) declaracao -> . declaracao_comentario
    (9) declaracao_atribuicao -> . VAR_ID = lista_expressoes ;
    (10) declaracao_atribuicao -> . atribuicao
    (11) declaracao_atribuicao -> . declaracao_atribuicao , atribuicao ;
    (15) declaracao_expressao -> . expressao ;
    (42) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) : bloco_funcao FIM
    (43) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) , : expressao ;
    (53) declaracao_se -> . SE expressao : lista_declaracoes senao_opcional FIM
    (59) declaracao_escrever -> . ESCREVER ( expressao ) ;
    (60) declaracao_comentario -> . COMENTARIO
    (12) atribuicao -> . VAR_ID = expressao
    (16) expressao -> . expressao + expressao
    (17) expressao -> . expressao - expressao
    (18) expressao -> . expressao * expressao
    (19) expressao -> . expressao / expressao
    (20) expressao -> . expressao AND expressao
    (21) expressao -> . expressao OR expressao
    (22) expressao -> . expressao EQ expressao
    (23) expressao -> . expressao NE expressao
    (24) expressao -> . expressao LT expressao
    (25) expressao -> . expressao LE expressao
    (26) expressao -> . expressao GT expressao
    (27) expressao -> . expressao GE expressao
    (28) expressao -> . ( expressao )
    (29) expressao -> . - expressao
    (30) expressao -> . NUM
    (31) expressao -> . STRING
    (32) expressao -> . VAR_ID
    (33) expressao -> . [ lista_elementos ]
    (37) expressao -> . MAP ( VAR_ID , expressao )
    (38) expressao -> . FOLD ( VAR_ID , expressao , expressao )
    (39) expressao -> . ENTRADA ( )
    (40) expressao -> . ALEATORIO ( NUM )
    (41) expressao -> . VAR_ID ( lista_expressoes )
    (52) expressao -> . [ ]
    (58) expressao -> . NEG expressao
    (62) expressao -> . expressao CONCAT expressao

    VAR_ID          shift and go to state 9
    FUNCAO          shift and go to state 12
    SE              shift and go to state 14
    ESCREVER        shift and go to state 15
    COMENTARIO      shift and go to state 16
    (               shift and go to state 13
    -               shift and go to state 17
    NUM             shift and go to state 18
    STRING          shift and go to state 19
    [               shift and go to state 20
    MAP             shift and go to state 21
    FOLD            shift and go to state 22
    ENTRADA         shift and go to state 23
    ALEATORIO       shift and go to state 24
    NEG             shift and go to state 25

    lista_declaracoes              shift and go to state 1
    declaracao                     shift and go to state 2
    declaracao_atribuicao          shift and go to state 3
    declaracao_expressao           shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_se                  shift and go to state 6
    declaracao_escrever            shift and go to state 7
    declaracao_comentario          shift and go to state 8
    atribuicao                     shift and go to state 10
    expressao                      shift and go to state 11

state 1

    (0) S' -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (3) declaracao -> . declaracao_atribuicao
    (4) declaracao -> . declaracao_expressao
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_se
    (7) declaracao -> . declaracao_escrever
    (8) declaracao -> . declaracao_comentario
    (9) declaracao_atribuicao -> . VAR_ID = lista_expressoes ;
    (10) declaracao_atribuicao -> . atribuicao
    (11) declaracao_atribuicao -> . declaracao_atribuicao , atribuicao ;
    (15) declaracao_expressao -> . expressao ;
    (42) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) : bloco_funcao FIM
    (43) declaracao_funcao -> . FUNCAO VAR_ID ( lista_parametros_opcional ) , : expressao ;
    (53) declaracao_se -> . SE expressao : lista_declaracoes senao_opcional FIM
    (59) declaracao_escrever -> . ESCREVER ( expressao ) ;
    (60) declaracao_comentario -> . COMENTARIO
    (12) atribuicao -> . VAR_ID = expressao
    (16) expressao -> . expressao + expressao
    (17) expressao -> . expressao - expressao
    (18) expressao -> . expressao * expressao
    (19) expressao -> . expressao / expressao
    (20) expressao -> . expressao AND expressao
    (21) expressao -> . expressao OR expressao
    (22) expressao -> . expressao EQ expressao
    (23) expressao -> . expressao NE expressao
    (24) expressao -> . expressao LT expressao
    (25) expressao -> . expressao LE expressao
    (26) expressao -> . expressao GT expressao
    (27) expressao -> . expressao GE expressao
    (28) expressao -> . ( expressao )
    (29) expressao -> . - expressao
    (30) expressao -> . NUM
    (31) expressao -> . STRING
    (32) expressao -> . VAR_ID
    (33) expressao -> . [ lista_elementos ]
    (37) expressao -> . MAP ( VAR_ID , expressao )
    (38) expressao -> . FOLD ( VAR_ID , expressao , expressao )
    (39) expressao -> . ENTRADA ( )
    (40) expressao -> . ALEATORIO ( NUM )
    (41) expressao -> . VAR_ID ( lista_expressoes )
    (52) expressao -> . [ ]
    (58) expressao -> . NEG expressao
    (62) expressao -> . expressao CONCAT expressao

    VAR_ID          shift and go to state 9
    FUNCAO          shift and go to state 12
    SE              shift and go to state 14
    ESCREVER        shift and go to state 15
    COMENTARIO      shift and go to state 16
    (               shift and go to state 13
    -               shift and go to state 17
    NUM             shift and go to state 18
    STRING          shift and go to state 19
    [               shift and go to state 20
    MAP             shift and go to state 21
    FOLD            shift and go to state 22
    ENTRADA         shift and go to state 23
    ALEATORIO       shift and go to state 24
    NEG             shift and go to state 25

    declaracao                     shift and go to state 26
    declaracao_atribuicao          shift and go to state 3
    declaracao_expressao           shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_se                  shift and go to state 6
    declaracao_escrever            shift and go to state 7
    declaracao_comentario          shift and go to state 8
    atribuicao                     shift and go to state 10
    expressao                      shift and go to state 11

state 2

    (1) lista_declaracoes -> declaracao .

    VAR_ID          reduce using rule 1 (lista_declaracoes -> declaracao .)
    FUNCAO          reduce using rule 1 (lista_declaracoes -> declaracao .)
    SE              reduce using rule 1 (lista_declaracoes -> declaracao .)
    ESCREVER        reduce using rule 1 (lista_declaracoes -> declaracao .)
    COMENTARIO      reduce using rule 1 (lista_declaracoes -> declaracao .)
    (               reduce using rule 1 (lista_declaracoes -> declaracao .)
    -               reduce using rule 1 (lista_declaracoes -> declaracao .)
    NUM             reduce using rule 1 (lista_declaracoes -> declaracao .)
    STRING          reduce using rule 1 (lista_declaracoes -> declaracao .)
    [               reduce using rule 1 (lista_declaracoes -> declaracao .)
    MAP             reduce using rule 1 (lista_declaracoes -> declaracao .)
    FOLD            reduce using rule 1 (lista_declaracoes -> declaracao .)
    ENTRADA         reduce using rule 1 (lista_declaracoes -> declaracao .)
    ALEATORIO       reduce using rule 1 (lista_declaracoes -> declaracao .)
    NEG             reduce using rule 1 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 1 (lista_declaracoes -> declaracao .)
    SENAO           reduce using rule 1 (lista_declaracoes -> declaracao .)
    SENAOSE         reduce using rule 1 (lista_declaracoes -> declaracao .)
    FIM             reduce using rule 1 (lista_declaracoes -> declaracao .)


state 3

    (3) declaracao -> declaracao_atribuicao .
    (11) declaracao_atribuicao -> declaracao_atribuicao . , atribuicao ;

    VAR_ID          reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    FUNCAO          reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    SE              reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ESCREVER        reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    COMENTARIO      reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    (               reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    -               reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    NUM             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    STRING          reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    [               reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    MAP             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    FOLD            reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ENTRADA         reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ALEATORIO       reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    NEG             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    $end            reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    SENAO           reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    SENAOSE         reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    FIM             reduce using rule 3 (declaracao -> declaracao_atribuicao .)
    ,               shift and go to state 27


state 4

    (4) declaracao -> declaracao_expressao .

    VAR_ID          reduce using rule 4 (declaracao -> declaracao_expressao .)
    FUNCAO          reduce using rule 4 (declaracao -> declaracao_expressao .)
    SE              reduce using rule 4 (declaracao -> declaracao_expressao .)
    ESCREVER        reduce using rule 4 (declaracao -> declaracao_expressao .)
    COMENTARIO      reduce using rule 4 (declaracao -> declaracao_expressao .)
    (               reduce using rule 4 (declaracao -> declaracao_expressao .)
    -               reduce using rule 4 (declaracao -> declaracao_expressao .)
    NUM             reduce using rule 4 (declaracao -> declaracao_expressao .)
    STRING          reduce using rule 4 (declaracao -> declaracao_expressao .)
    [               reduce using rule 4 (declaracao -> declaracao_expressao .)
    MAP             reduce using rule 4 (declaracao -> declaracao_expressao .)
    FOLD            reduce using rule 4 (declaracao -> declaracao_expressao .)
    ENTRADA         reduce using rule 4 (declaracao -> declaracao_expressao .)
    ALEATORIO       reduce using rule 4 (declaracao -> declaracao_expressao .)
    NEG             reduce using rule 4 (declaracao -> declaracao_expressao .)
    $end            reduce using rule 4 (declaracao -> declaracao_expressao .)
    SENAO           reduce using rule 4 (declaracao -> declaracao_expressao .)
    SENAOSE         reduce using rule 4 (declaracao -> declaracao_expressao .)
    FIM             reduce using rule 4 (declaracao -> declaracao_expressao .)


state 5

    (5) declaracao -> declaracao_funcao .

    VAR_ID          reduce using rule 5 (declaracao -> declaracao_funcao .)
    FUNCAO          reduce using rule 5 (declaracao -> declaracao_funcao .)
    SE              reduce using rule 5 (declaracao -> declaracao_funcao .)
    ESCREVER        reduce using rule 5 (declaracao -> declaracao_funcao .)
    COMENTARIO      reduce using rule 5 (declaracao -> declaracao_funcao .)
    (               reduce using rule 5 (declaracao -> declaracao_funcao .)
    -               reduce using rule 5 (declaracao -> declaracao_funcao .)
    NUM             reduce using rule 5 (declaracao -> declaracao_funcao .)
    STRING          reduce using rule 5 (declaracao -> declaracao_funcao .)
    [               reduce using rule 5 (declaracao -> declaracao_funcao .)
    MAP             reduce using rule 5 (declaracao -> declaracao_funcao .)
    FOLD            reduce using rule 5 (declaracao -> declaracao_funcao .)
    ENTRADA         reduce using rule 5 (declaracao -> declaracao_funcao .)
    ALEATORIO       reduce using rule 5 (declaracao -> declaracao_funcao .)
    NEG             reduce using rule 5 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 5 (declaracao -> declaracao_funcao .)
    SENAO           reduce using rule 5 (declaracao -> declaracao_funcao .)
    SENAOSE         reduce using rule 5 (declaracao -> declaracao_funcao .)
    FIM             reduce using rule 5 (declaracao -> declaracao_funcao .)


state 6

    (6) declaracao -> declaracao_se .

    VAR_ID          reduce using rule 6 (declaracao -> declaracao_se .)
    FUNCAO          reduce using rule 6 (declaracao -> declaracao_se .)
    SE              reduce using rule 6 (declaracao -> declaracao_se .)
    ESCREVER        reduce using rule 6 (declaracao -> declaracao_se .)
    COMENTARIO      reduce using rule 6 (declaracao -> declaracao_se .)
    (               reduce using rule 6 (declaracao -> declaracao_se .)
    -               reduce using rule 6 (declaracao -> declaracao_se .)
    NUM             reduce using rule 6 (declaracao -> declaracao_se .)
    STRING          reduce using rule 6 (declaracao -> declaracao_se .)
    [               reduce using rule 6 (declaracao -> declaracao_se .)
    MAP             reduce using rule 6 (declaracao -> declaracao_se .)
    FOLD            reduce using rule 6 (declaracao -> declaracao_se .)
    ENTRADA         reduce using rule 6 (declaracao -> declaracao_se .)
    ALEATORIO       reduce using rule 6 (declaracao -> declaracao_se .)
    NEG             reduce using rule 6 (declaracao -> declaracao_se .)
    $end            reduce using rule 6 (declaracao -> declaracao_se .)
    SENAO           reduce using rule 6 (declaracao -> declaracao_se .)
    SENAOSE         reduce using rule 6 (declaracao -> declaracao_se .)
    FIM             reduce using rule 6 (declaracao -> declaracao_se .)


state 7

    (7) declaracao -> declaracao_escrever .

    VAR_ID          reduce using rule 7 (declaracao -> declaracao_escrever .)
    FUNCAO          reduce using rule 7 (declaracao -> declaracao_escrever .)
    SE              reduce using rule 7 (declaracao -> declaracao_escrever .)
    ESCREVER        reduce using rule 7 (declaracao -> declaracao_escrever .)
    COMENTARIO      reduce using rule 7 (declaracao -> declaracao_escrever .)
    (               reduce using rule 7 (declaracao -> declaracao_escrever .)
    -               reduce using rule 7 (declaracao -> declaracao_escrever .)
    NUM             reduce using rule 7 (declaracao -> declaracao_escrever .)
    STRING          reduce using rule 7 (declaracao -> declaracao_escrever .)
    [               reduce using rule 7 (declaracao -> declaracao_escrever .)
    MAP             reduce using rule 7 (declaracao -> declaracao_escrever .)
    FOLD            reduce using rule 7 (declaracao -> declaracao_escrever .)
    ENTRADA         reduce using rule 7 (declaracao -> declaracao_escrever .)
    ALEATORIO       reduce using rule 7 (declaracao -> declaracao_escrever .)
    NEG             reduce using rule 7 (declaracao -> declaracao_escrever .)
    $end            reduce using rule 7 (declaracao -> declaracao_escrever .)
    SENAO           reduce using rule 7 (declaracao -> declaracao_escrever .)
    SENAOSE         reduce using rule 7 (declaracao -> declaracao_escrever .)
    FIM             reduce using rule 7 (declaracao -> declaracao_escrever .)


state 8

    (8) declaracao -> declaracao_comentario .
